# FIR-filter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  filter.cpp  generate-signal.py  main  main.cpp  reference.cpp  vectorize.py
include/: Common.h  FIR.h
minor-project-build/: Makefile  data.csv  main  main.ipynb
minor-project-build/src/: main.cpp
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  commands.p  data.csv  filter  main
project/src/: FIR.cpp  main.cpp
source/: FIR.cpp
src/: FIR.cpp
test/: working-main.cpp
test-scripts/: main-in-progress-vectors.cpp  working-main.cpp
